--- a/semana-01/exercicio/index.html
+++ b/semana-01/exercicio/index.html
@@ -9,30 +9,30 @@
     <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <form class="max-width" action="contato.php" method="post">
+    <form class="max-width" action="contato.php" method="post" id="frmCadastro">
         <!--ROW NAME and EMAIL-->
         <div class="grid-50 mobile-grid-100">
             <label for="txtNome">Nome</label>
-            <input type="text" name="txtNome" id="txtNome" placeholder="Ana Carolina" class="frm">
+            <input type="text" name="txtNome" id="txtNome" placeholder="Ana Carolina" class="frm" >
             <br>
         </div>
 
         <div class="grid-50 mobile-grid-100">
             <label for="txtEmail">E-mail</label>
-            <input type="text" name="txtEmail" id="txtEmail" placeholder="nome@email.com" class="frm">
+            <input type="text" name="txtEmail" id="txtEmail" placeholder="nome@email.com" class="frm" >
             <br>
         </div>
 
         <!---ROW PHONE and TOPIC-->
         <div class="grid-50 mobile-grid-100">
             <label for="txtFone">Telefone</label>
-            <input type="text" name="txtFone" id="txtFone" placeholder="(xx) x xxxx-xxxx" class="frm">
+            <input type="text" name="txtFone" id="txtFone" placeholder="(xx) x xxxx-xxxx" class="frm" >
             <br>
         </div>
 
         <div class="grid-50 mobile-grid-100">
             <label for="txtAssunto">Assunto</label>
-            <select name="txtAssunto" id="txtAssunto" class="frm">
+            <select name="txtAssunto" id="txtAssunto" class="frm" >
                 <option value="1">Comercial</option>
                 <option value="2">Dúvidas</option>
                 <option value="3">Parcerias</option>
@@ -44,12 +44,12 @@
         <!--ROW MESSAGE-->
         <div class="grid-100 mobile-grid-100">
             <label for="txtMessage">Mensagem</label>
-            <textarea class="frm" name="txtMessage" id="txtMessage" rows="5" placeholder="Texto"></textarea>
+            <textarea class="frm" name="txtMessage" id="txtMessage" rows="5" placeholder="Texto" ></textarea>
         </div>
 
         <!--ROW BUTTON-->
         <div class="mobile-grid-100">
-            <button type="submit" class="btn">Enviar</button>
+            <button onclick="validar()" type="submit" class="btn">Enviar</button>
         </div>
     </form>
 
